[package]
name = "snlc"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
serde_json = "1.0"
snl-lexer = { path = "../snl-lexer" }
snl-rdp = { path = "../snl-rdp" }
snl-ll1 = { path = "../snl-ll1" }
snl-semantic = { path = "../snl-semantic" }
